mail and dark mode fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,7 +21,8 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  /* color: rgb(var(--foreground-rgb)); */
+  color: #0a0a0a;
   font-family: "Inter Variable", Arial, Helvetica, sans-serif;
 }
 
@@ -106,7 +107,7 @@ body {
     --sidebar-border: 220 13% 91%;
     --sidebar-ring: 217.2 91.2% 59.8%;
   }
-  .dark {
+  .danork {
     --background: 0 0% 3.9%;
     --foreground: 0 0% 98%;
     --card: 0 0% 3.9%;
